--- a/Windows-8-0-сборки.css
+++ b/Windows-8-0-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3809px;
+  min-height: 3620px;
 }
 
 .u-section-1 .u-text-1 {
@@ -57,27 +57,12 @@
   margin: 47px auto 0;
 }
 
-.u-section-1 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-  align-self: center;
-  margin: 9px auto 0;
-  padding: 10px 41px;
-}
-
-.u-section-1 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-  align-self: center;
-  margin: 9px auto 0;
-  padding: 10px 43px 10px 42px;
-}
-
 .u-section-1 .u-text-4 {
-  margin: 114px auto 0;
+  width: 134px;
+  margin: 60px auto 0;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
@@ -85,7 +70,7 @@
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
@@ -93,10 +78,10 @@
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-6 {
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 37px;
+  margin: 6px auto 60px;
   padding: 10px 37px;
 }
 
@@ -123,7 +108,7 @@
     width: auto;
   }
 
-  .u-section-1 .u-btn-6 {
+  .u-section-1 .u-btn-4 {
     margin-bottom: 28px;
   }
 }
@@ -267,16 +252,6 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: -53px;
-    margin-right: -53px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: -53px;
-    margin-right: -53px;
-  }
-
-  .u-section-1 .u-btn-3 {
     margin-left: -53px;
     margin-right: -53px;
   }
