--- a/Windows-Lite-сборки.css
+++ b/Windows-Lite-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 10879px;
+  min-height: 10307px;
 }
 
 .u-section-1 .u-text-1 {
@@ -52,24 +52,9 @@
   margin: 43px auto 0;
 }
 
-.u-section-1 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  align-self: center;
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 41px;
-}
-
-.u-section-1 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  align-self: center;
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 43px 10px 42px;
-}
-
 .u-section-1 .u-text-4 {
-  margin: 120px auto 0;
+  width: 391px;
+  margin: 89px auto 0;
 }
 
 .u-section-1 .u-image-5 {
@@ -101,31 +86,16 @@
   margin: 28px auto 0;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   background-image: none;
   margin: 43px auto 0;
 }
 
-.u-section-1 .u-btn-5 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  align-self: center;
-  background-image: none;
-  margin: 10px auto 0;
-  padding: 10px 41px;
-}
-
-.u-section-1 .u-btn-6 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  align-self: center;
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 43px 10px 42px;
-}
-
 .u-section-1 .u-text-6 {
-  margin: 120px auto 0;
+  width: 415px;
+  margin: 90px auto 0;
 }
 
 .u-section-1 .u-image-9 {
@@ -170,55 +140,39 @@
   margin: 29px 86px 0;
 }
 
-.u-section-1 .u-btn-7 {
+.u-section-1 .u-btn-3 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   background-image: none;
   margin: 43px auto 0;
 }
 
-.u-section-1 .u-btn-8 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  align-self: center;
-  background-image: none;
-  margin: 10px auto 0;
-  padding: 10px 41px;
-}
-
-.u-section-1 .u-btn-9 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  align-self: center;
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 43px;
-}
-
 .u-section-1 .u-text-8 {
-  margin: 162px auto 0;
+  margin: 43px auto 0;
 }
 
-.u-section-1 .u-btn-10 {
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-11 {
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-12 {
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 37px;
 }
 
-.u-section-1 .u-btn-13 {
+.u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 60px;
@@ -227,7 +181,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 10918px;
+    min-height: 10355px;
   }
 
   .u-section-1 .u-image-3 {
@@ -250,16 +204,15 @@
     margin-right: 38px;
   }
 
-  .u-section-1 .u-btn-4 {
+  .u-section-1 .u-btn-2 {
     margin-top: 45px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 9px;
   }
 
   .u-section-1 .u-text-6 {
     width: auto;
+    margin-top: 89px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-9 {
@@ -289,23 +242,26 @@
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-7 {
+  .u-section-1 .u-btn-3 {
     margin-top: 47px;
   }
 
   .u-section-1 .u-text-8 {
     width: auto;
-    margin-top: 111px;
   }
 
-  .u-section-1 .u-btn-11 {
+  .u-section-1 .u-btn-5 {
     margin-top: 7px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-bottom: 52px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 10182px;
+    min-height: 9513px;
   }
 
   .u-section-1 .u-text-1 {
@@ -346,7 +302,6 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: 118px;
   }
 
   .u-section-1 .u-image-5 {
@@ -384,16 +339,12 @@
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-4 {
+  .u-section-1 .u-btn-2 {
     margin-top: 44px;
   }
 
-  .u-section-1 .u-btn-5 {
-    margin-top: 10px;
-  }
-
   .u-section-1 .u-text-6 {
-    margin-top: 119px;
+    margin-top: 90px;
   }
 
   .u-section-1 .u-image-9 {
@@ -446,24 +397,21 @@
     margin-top: 29px;
   }
 
-  .u-section-1 .u-btn-7 {
+  .u-section-1 .u-btn-3 {
     margin-top: 44px;
   }
 
-  .u-section-1 .u-text-8 {
-    margin-top: 93px;
-  }
-
-  .u-section-1 .u-btn-11 {
+  .u-section-1 .u-btn-5 {
     margin-top: 9px;
   }
 
-  .u-section-1 .u-btn-12 {
+  .u-section-1 .u-btn-6 {
     margin-top: 9px;
   }
 
-  .u-section-1 .u-btn-13 {
+  .u-section-1 .u-btn-7 {
     margin-top: 9px;
+    margin-bottom: 60px;
   }
 }
 
@@ -525,7 +473,7 @@
     margin-left: initial;
   }
 
-  .u-section-1 .u-btn-4 {
+  .u-section-1 .u-btn-2 {
     margin-top: 20px;
   }
 
@@ -560,7 +508,7 @@
     margin-top: 20px;
   }
 
-  .u-section-1 .u-btn-7 {
+  .u-section-1 .u-btn-3 {
     margin-top: -2193px;
   }
 }
@@ -608,16 +556,6 @@
     margin-top: 260px;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-left: -99px;
-    margin-right: -99px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: -99px;
-    margin-right: -99px;
-  }
-
   .u-section-1 .u-image-9 {
     height: 191px;
     margin-top: 59px;
@@ -663,7 +601,7 @@
     margin-left: initial;
   }
 
-  .u-section-1 .u-btn-7 {
+  .u-section-1 .u-btn-3 {
     margin-top: -1761px;
   }
 } .u-section-2 {
@@ -685,478 +623,14 @@
   }
 }
 
+@media (max-width: 767px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 64px;
+  }
+}
+
 @media (max-width: 575px) {
   .u-section-2 .u-text-1 {
     margin-top: 62px;
-  }
-} .u-section-3 {
-  background-image: url("images/windows-10-original-1366x768.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-3 .u-sheet-1 {
-  min-height: 8873px;
-}
-
-.u-section-3 .u-text-1 {
-  margin: 0;
-}
-
-.u-section-3 .u-text-2 {
-  margin: 0;
-}
-
-.u-section-3 .u-image-1 {
-  height: 405px;
-  margin-top: 16px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-image-2 {
-  height: 405px;
-  margin-top: 16px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-image-3 {
-  height: 292px;
-  object-position: 0% 50%;
-  margin-top: 320px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-image-4 {
-  height: 289px;
-  object-position: 5.63% 50%;
-  margin-top: -596px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-text-3 {
-  margin: 0;
-}
-
-.u-section-3 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-text-4 {
-  width: auto;
-  margin: 120px auto 0;
-}
-
-.u-section-3 .u-image-5 {
-  height: 405px;
-  margin-top: 28px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-image-6 {
-  height: 405px;
-  margin-top: 16px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-image-7 {
-  height: 405px;
-  margin-top: 16px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-image-8 {
-  height: 405px;
-  margin-top: 16px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-text-5 {
-  margin: 0;
-}
-
-.u-section-3 .u-btn-4 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-btn-5 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-btn-6 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-text-6 {
-  width: auto;
-  margin: 120px auto 0;
-}
-
-.u-section-3 .u-image-9 {
-  width: 540px;
-  height: 302px;
-  margin: 20px 0 0;
-}
-
-.u-section-3 .u-image-10 {
-  width: 540px;
-  height: 302px;
-  margin: 20px 0 0;
-}
-
-.u-section-3 .u-image-11 {
-  height: 302px;
-  object-position: 0% 50%;
-  margin-top: 20px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-image-12 {
-  width: 540px;
-  height: 302px;
-  object-position: 0% 50%;
-  margin: 20px 0 0;
-}
-
-.u-section-3 .u-image-13 {
-  width: 540px;
-  height: 302px;
-  margin: 20px 0 0;
-}
-
-.u-section-3 .u-image-14 {
-  width: 540px;
-  height: 302px;
-  margin: 20px 0 0;
-}
-
-.u-section-3 .u-text-7 {
-  margin: 0;
-}
-
-.u-section-3 .u-btn-7 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-btn-8 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-3 .u-btn-9 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-@media (max-width: 1199px) {
-  .u-section-3 .u-text-1 {
-    width: auto;
-  }
-
-  .u-section-3 .u-text-2 {
-    width: auto;
-    margin-left: 54px;
-    margin-right: 54px;
-  }
-
-  .u-section-3 .u-text-3 {
-    width: auto;
-  }
-
-  .u-section-3 .u-text-5 {
-    width: auto;
-  }
-
-  .u-section-3 .u-text-7 {
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-3 .u-image-9 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-3 .u-image-10 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-3 .u-image-12 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-3 .u-image-13 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-3 .u-image-14 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-text-1 {
-    margin-top: 29px;
-  }
-
-  .u-section-3 .u-image-1 {
-    height: 303px;
-  }
-
-  .u-section-3 .u-image-2 {
-    height: 302px;
-  }
-
-  .u-section-3 .u-image-4 {
-    margin-top: -597px;
-  }
-
-  .u-section-3 .u-text-3 {
-    margin-top: 337px;
-  }
-
-  .u-section-3 .u-btn-1 {
-    align-self: center;
-    margin: 47px auto 0;
-  }
-
-  .u-section-3 .u-btn-2 {
-    align-self: center;
-    margin: 9px auto 0;
-    padding: 10px 41px;
-  }
-
-  .u-section-3 .u-btn-3 {
-    align-self: center;
-    margin: 9px auto 0;
-    padding: 10px 43px 10px 42px;
-  }
-
-  .u-section-3 .u-image-5 {
-    height: 302px;
-  }
-
-  .u-section-3 .u-image-6 {
-    height: 302px;
-  }
-
-  .u-section-3 .u-image-7 {
-    height: 302px;
-  }
-
-  .u-section-3 .u-image-8 {
-    height: 302px;
-  }
-
-  .u-section-3 .u-text-5 {
-    margin-top: 28px;
-  }
-
-  .u-section-3 .u-btn-4 {
-    align-self: center;
-    margin: 16px auto 0;
-  }
-
-  .u-section-3 .u-btn-5 {
-    align-self: center;
-    margin: 10px auto 0;
-    padding: 10px 41px;
-  }
-
-  .u-section-3 .u-btn-6 {
-    align-self: center;
-    margin: 9px auto 0;
-    padding: 10px 43px 10px 42px;
-  }
-
-  .u-section-3 .u-text-7 {
-    margin-top: 28px;
-  }
-
-  .u-section-3 .u-btn-7 {
-    align-self: center;
-    margin: 15px auto 0;
-  }
-
-  .u-section-3 .u-btn-8 {
-    align-self: center;
-    margin: 10px auto 0;
-    padding: 10px 41px;
-  }
-
-  .u-section-3 .u-btn-9 {
-    align-self: center;
-    margin: 9px auto 60px;
-    padding: 10px 43px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 8001px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-image-1 {
-    height: 195px;
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-image-2 {
-    height: 195px;
-    margin-top: 9px;
-  }
-
-  .u-section-3 .u-image-3 {
-    height: 195px;
-    margin-top: 213px;
-  }
-
-  .u-section-3 .u-image-4 {
-    height: 195px;
-    margin-top: -399px;
-  }
-
-  .u-section-3 .u-text-3 {
-    margin-top: 232px;
-  }
-
-  .u-section-3 .u-btn-1 {
-    margin-left: -99px;
-    margin-right: -99px;
-  }
-
-  .u-section-3 .u-btn-2 {
-    margin-left: -99px;
-    margin-right: -99px;
-  }
-
-  .u-section-3 .u-btn-3 {
-    margin-left: -99px;
-    margin-right: -99px;
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-image-5 {
-    height: 195px;
-  }
-
-  .u-section-3 .u-image-6 {
-    height: 195px;
-  }
-
-  .u-section-3 .u-image-7 {
-    height: 195px;
-  }
-
-  .u-section-3 .u-image-8 {
-    height: 195px;
-  }
-
-  .u-section-3 .u-btn-4 {
-    margin-left: -80px;
-    margin-right: -80px;
-  }
-
-  .u-section-3 .u-btn-5 {
-    margin-left: -80px;
-    margin-right: -80px;
-  }
-
-  .u-section-3 .u-btn-6 {
-    margin-left: -80px;
-    margin-right: -80px;
-  }
-
-  .u-section-3 .u-text-6 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-image-9 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-10 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-11 {
-    height: 195px;
-  }
-
-  .u-section-3 .u-image-12 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-13 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-14 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-btn-7 {
-    margin-left: -92px;
-    margin-right: -92px;
-  }
-
-  .u-section-3 .u-btn-8 {
-    margin-left: -92px;
-    margin-right: -92px;
-  }
-
-  .u-section-3 .u-btn-9 {
-    margin-left: -92px;
-    margin-right: -92px;
   }
 }
