--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -1256,33 +1256,17 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 50vw;
-}
-
-.u-section-2 .u-text-1 {
-  width: auto;
-  font-size: 3rem;
-  margin: 62px auto 60px;
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-text-1 {
-    font-size: 1.5rem;
-    margin-left: 0;
-    margin-right: 0;
-  }
-}.u-section-3 .u-sheet-1 {
   min-height: 500px;
 }
 
-.u-section-3 .u-text-1 {
-  width: auto;
-  margin: 60px 0;
+.u-section-2 .u-text-1 {
+  margin: 198px 32px 0;
 }
 
-@media (max-width: 1199px) {
-  .u-section-3 .u-text-1 {
-    margin-left: 43px;
-    margin-right: 43px;
-  }
+.u-section-2 .u-btn-1 {
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin: 13px auto 60px;
 }
