--- a/Библиотека-Образов.css
+++ b/Библиотека-Образов.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2342px;
+  min-height: 1504px;
 }
 
 .u-section-1 .u-text-1 {
@@ -23,210 +23,132 @@
 .u-section-1 .u-btn-2 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 97px 10px 96px;
+  padding: 10px 220px 10px 219px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 220px 10px 219px;
+  padding: 10px 147px 10px 146px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 147px 10px 146px;
+  padding: 10px 133px 10px 132px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 133px 10px 132px;
+  padding: 10px 132px 10px 130px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 132px 10px 130px;
+  padding: 10px 206px 10px 205px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 155px 10px 153px;
+  padding: 10px 206px 10px 205px;
 }
 
 .u-section-1 .u-btn-8 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 150px 10px 148px;
+  padding: 10px 204px 10px 202px;
 }
 
 .u-section-1 .u-btn-9 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 150px 10px 148px;
+  padding: 10px 171px 10px 170px;
 }
 
 .u-section-1 .u-btn-10 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 126px 10px 124px;
+  padding: 10px 160px 10px 159px;
 }
 
 .u-section-1 .u-btn-11 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 206px 10px 205px;
+  padding: 10px 154px;
 }
 
 .u-section-1 .u-btn-12 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 206px 10px 205px;
+  padding: 10px 129px 10px 127px;
 }
 
 .u-section-1 .u-btn-13 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 204px 10px 202px;
+  padding: 10px 180px 10px 179px;
 }
 
 .u-section-1 .u-btn-14 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 171px 10px 170px;
+  padding: 10px 181px 10px 179px;
 }
 
 .u-section-1 .u-btn-15 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 160px 10px 159px;
+  padding: 10px 109px 10px 108px;
 }
 
 .u-section-1 .u-btn-16 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 154px;
+  padding: 10px 109px 10px 108px;
 }
 
 .u-section-1 .u-btn-17 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 129px 10px 127px;
+  padding: 10px 190px 10px 188px;
 }
 
 .u-section-1 .u-btn-18 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 180px 10px 179px;
+  padding: 10px 190px 10px 188px;
 }
 
 .u-section-1 .u-btn-19 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 181px 10px 179px;
+  padding: 10px 152px 10px 151px;
 }
 
 .u-section-1 .u-btn-20 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 109px 10px 108px;
+  padding: 10px 144px 10px 142px;
 }
 
 .u-section-1 .u-btn-21 {
   background-image: none;
   margin: 9px auto 0;
-  padding: 10px 109px 10px 108px;
+  padding: 10px 166px 10px 164px;
 }
 
 .u-section-1 .u-btn-22 {
   background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 190px 10px 188px;
-}
-
-.u-section-1 .u-btn-23 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 190px 10px 188px;
-}
-
-.u-section-1 .u-btn-24 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 152px 10px 151px;
-}
-
-.u-section-1 .u-btn-25 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 144px 10px 142px;
-}
-
-.u-section-1 .u-btn-26 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 166px 10px 164px;
-}
-
-.u-section-1 .u-btn-27 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 165px 10px 164px;
-}
-
-.u-section-1 .u-btn-28 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 150px;
-}
-
-.u-section-1 .u-btn-29 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 145px 10px 144px;
-}
-
-.u-section-1 .u-btn-30 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 144px;
-}
-
-.u-section-1 .u-btn-31 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 111px;
-}
-
-.u-section-1 .u-btn-32 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 179px;
-}
-
-.u-section-1 .u-btn-33 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 160px 10px 159px;
-}
-
-.u-section-1 .u-btn-34 {
-  background-image: none;
-  margin: 9px auto 0;
-  padding: 10px 84px;
-}
-
-.u-section-1 .u-btn-35 {
-  background-image: none;
   margin: 9px auto 60px;
-  padding: 10px 84px;
+  padding: 10px 165px 10px 164px;
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2348px;
+    min-height: 1630px;
   }
 
   .u-section-1 .u-text-1 {
@@ -251,210 +173,136 @@
   .u-section-1 .u-btn-2 {
     margin-left: 0;
     margin-right: 0;
-    padding-right: 17px;
-    padding-left: 16px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: 0;
-    margin-right: 0;
     padding-right: 141px;
     padding-left: 139px;
   }
 
-  .u-section-1 .u-btn-4 {
+  .u-section-1 .u-btn-3 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 67px;
     padding-left: 66px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-4 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 54px;
     padding-left: 52px;
   }
 
-  .u-section-1 .u-btn-6 {
+  .u-section-1 .u-btn-5 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 51px;
     padding-left: 50px;
   }
 
-  .u-section-1 .u-btn-7 {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 73px;
-    padding-right: 73px;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-left: -1px;
-    margin-right: -1px;
-    padding-right: 69px;
-    padding-left: 69px;
-  }
-
-  .u-section-1 .u-btn-9 {
-    margin-left: 0;
-    margin-right: 0;
-    padding-right: 69px;
-    padding-left: 68px;
-  }
-
-  .u-section-1 .u-btn-10 {
-    margin-left: 0;
-    margin-right: 0;
-    padding-right: 45px;
-    padding-left: 44px;
-  }
-
-  .u-section-1 .u-btn-11 {
+  .u-section-1 .u-btn-6 {
     padding-right: 125px;
     padding-left: 124px;
   }
 
-  .u-section-1 .u-btn-12 {
+  .u-section-1 .u-btn-7 {
     margin-left: -1px;
     margin-right: -1px;
     padding-right: 127px;
     padding-left: 125px;
   }
 
-  .u-section-1 .u-btn-13 {
+  .u-section-1 .u-btn-8 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 124px;
     padding-left: 122px;
   }
 
-  .u-section-1 .u-btn-14 {
+  .u-section-1 .u-btn-9 {
     margin-left: -1px;
     margin-right: -1px;
     padding-right: 91px;
     padding-left: 90px;
   }
 
-  .u-section-1 .u-btn-15 {
+  .u-section-1 .u-btn-10 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 79px;
     padding-left: 78px;
   }
 
-  .u-section-1 .u-btn-16 {
+  .u-section-1 .u-btn-11 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 73px;
     padding-left: 73px;
   }
 
-  .u-section-1 .u-btn-17 {
+  .u-section-1 .u-btn-12 {
     padding-right: 48px;
     padding-left: 47px;
   }
 
-  .u-section-1 .u-btn-18 {
+  .u-section-1 .u-btn-13 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 101px;
     padding-left: 99px;
   }
 
-  .u-section-1 .u-btn-19 {
+  .u-section-1 .u-btn-14 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 101px;
     padding-left: 99px;
   }
 
-  .u-section-1 .u-btn-20 {
+  .u-section-1 .u-btn-15 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 30px;
     padding-left: 28px;
   }
 
-  .u-section-1 .u-btn-21 {
+  .u-section-1 .u-btn-16 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 30px;
     padding-left: 28px;
   }
 
-  .u-section-1 .u-btn-22 {
+  .u-section-1 .u-btn-17 {
     margin-left: -1px;
     margin-right: -1px;
     padding-right: 110px;
     padding-left: 109px;
   }
 
-  .u-section-1 .u-btn-23 {
+  .u-section-1 .u-btn-18 {
     margin-left: 0;
     margin-right: 0;
     padding-right: 109px;
     padding-left: 108px;
   }
 
-  .u-section-1 .u-btn-24 {
+  .u-section-1 .u-btn-19 {
     padding-right: 71px;
     padding-left: 70px;
   }
 
-  .u-section-1 .u-btn-25 {
+  .u-section-1 .u-btn-20 {
     padding-left: 62px;
     padding-right: 62px;
   }
 
-  .u-section-1 .u-btn-26 {
+  .u-section-1 .u-btn-21 {
     padding-left: 84px;
     padding-right: 84px;
   }
 
-  .u-section-1 .u-btn-27 {
+  .u-section-1 .u-btn-22 {
+    margin-bottom: 44px;
     padding-left: 84px;
     padding-right: 84px;
-  }
-
-  .u-section-1 .u-btn-28 {
-    padding-right: 70px;
-    padding-left: 69px;
-  }
-
-  .u-section-1 .u-btn-29 {
-    padding-right: 64px;
-    padding-left: 63px;
-  }
-
-  .u-section-1 .u-btn-30 {
-    padding-right: 64px;
-    padding-left: 63px;
-  }
-
-  .u-section-1 .u-btn-31 {
-    padding-right: 31px;
-    padding-left: 30px;
-  }
-
-  .u-section-1 .u-btn-32 {
-    padding-right: 99px;
-    padding-left: 98px;
-  }
-
-  .u-section-1 .u-btn-33 {
-    padding-left: 79px;
-    padding-right: 79px;
-  }
-
-  .u-section-1 .u-btn-34 {
-    padding-right: 4px;
-    padding-left: 3px;
-  }
-
-  .u-section-1 .u-btn-35 {
-    padding-right: 4px;
-    padding-left: 3px;
   }
 }
