--- a/Обновления-для-Windows.css
+++ b/Обновления-для-Windows.css
@@ -20,19 +20,19 @@
 .u-section-1 .u-btn-2 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 56px;
+  padding: 10px 47px 10px 46px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 47px 10px 46px;
+  padding: 10px 40px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 40px;
+  padding: 10px 100px 10px 99px;
 }
 
 .u-section-1 .u-btn-5 {
@@ -44,19 +44,19 @@
 .u-section-1 .u-btn-6 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 100px 10px 99px;
+  padding: 10px 177px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 177px;
+  padding: 10px 78px 10px 77px;
 }
 
 .u-section-1 .u-btn-8 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 78px 10px 77px;
+  padding: 10px 114px 10px 113px;
 }
 
 .u-section-1 .u-btn-9 {
@@ -109,12 +109,6 @@
 
 .u-section-1 .u-btn-17 {
   background-image: none;
-  margin: 8px auto 0;
-  padding: 10px 114px 10px 113px;
-}
-
-.u-section-1 .u-btn-18 {
-  background-image: none;
   margin: 8px auto 60px;
   padding: 10px 114px 10px 113px;
 }
@@ -130,7 +124,7 @@
     min-height: 1203px;
   }
 
-  .u-section-1 .u-btn-18 {
+  .u-section-1 .u-btn-17 {
     margin-bottom: 44px;
   }
 }
@@ -150,7 +144,7 @@
     margin-top: 49px;
   }
 
-  .u-section-1 .u-btn-8 {
+  .u-section-1 .u-btn-7 {
     padding-left: 0;
     padding-right: 0;
   }
@@ -192,13 +186,13 @@
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: -80px;
-    margin-right: -80px;
+    margin-left: -94px;
+    margin-right: -94px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-left: -94px;
-    margin-right: -94px;
+    margin-left: -80px;
+    margin-right: -80px;
   }
 
   .u-section-1 .u-btn-9 {
@@ -237,16 +231,11 @@
   }
 
   .u-section-1 .u-btn-16 {
-    margin-left: -80px;
-    margin-right: -80px;
-  }
-
-  .u-section-1 .u-btn-17 {
     margin-left: -83px;
     margin-right: -83px;
   }
 
-  .u-section-1 .u-btn-18 {
+  .u-section-1 .u-btn-17 {
     margin-left: -83px;
     margin-right: -83px;
     margin-bottom: 60px;
@@ -261,6 +250,17 @@
 
 .u-section-2 .u-text-1 {
   font-size: 1.5rem;
-  width: auto;
-  margin: 63px 0 60px;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 65px;
+  }
 }
