--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 4688px;
+  min-height: 4154px;
 }
 
 .u-section-1 .u-text-1 {
@@ -27,22 +27,8 @@
   margin: 16px auto 0;
 }
 
-.u-section-1 .u-image-3 {
-  width: 450px;
-  height: 292px;
-  object-position: 0% 50%;
-  margin: 16px auto 0 120px;
-}
-
-.u-section-1 .u-image-4 {
-  width: 440px;
-  height: 289px;
-  object-position: 5.63% 50%;
-  margin: -292px 120px 0 auto;
-}
-
 .u-section-1 .u-text-3 {
-  margin: 31px 0 0;
+  margin: 43px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -63,26 +49,26 @@
   margin: 120px auto 0;
 }
 
+.u-section-1 .u-image-3 {
+  width: 900px;
+  height: 506px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-4 {
+  width: 900px;
+  height: 506px;
+  margin: 16px auto 0;
+}
+
 .u-section-1 .u-image-5 {
-  width: 900px;
-  height: 506px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-6 {
-  width: 900px;
-  height: 506px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-7 {
   width: 450px;
   height: 292px;
   object-position: 0% 50%;
   margin: 16px auto 0 120px;
 }
 
-.u-section-1 .u-image-8 {
+.u-section-1 .u-image-6 {
   width: 440px;
   height: 289px;
   object-position: 5.63% 50%;
@@ -127,19 +113,11 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4652px;
+    min-height: 4198px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
-  }
-
-  .u-section-1 .u-image-3 {
-    margin-left: 20px;
-  }
-
-  .u-section-1 .u-image-4 {
-    margin-right: 20px;
   }
 
   .u-section-1 .u-text-3 {
@@ -154,11 +132,11 @@
     align-self: center;
   }
 
-  .u-section-1 .u-image-7 {
+  .u-section-1 .u-image-5 {
     margin-left: 20px;
   }
 
-  .u-section-1 .u-image-8 {
+  .u-section-1 .u-image-6 {
     margin-right: 20px;
     margin-left: auto;
   }
@@ -182,7 +160,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4909px;
+    min-height: 4049px;
   }
 
   .u-section-1 .u-text-1 {
@@ -203,47 +181,50 @@
     width: auto;
   }
 
+  .u-section-1 .u-text-3 {
+    margin-top: 41px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+  }
+
   .u-section-1 .u-image-3 {
-    width: 544px;
-    margin-left: auto;
+    height: 405px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-4 {
-    width: 655px;
-    margin-top: 20px;
-    margin-right: auto;
+    height: 405px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-5 {
-    height: 405px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-image-6 {
-    height: 405px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-image-7 {
     width: 544px;
     margin-left: auto;
   }
 
-  .u-section-1 .u-image-8 {
+  .u-section-1 .u-image-6 {
     width: 655px;
     height: 288px;
     margin-top: 20px;
     margin-right: auto;
   }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 74px;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4526px;
+    min-height: 3703px;
   }
 
   .u-section-1 .u-text-1 {
@@ -266,45 +247,25 @@
     margin-left: initial;
   }
 
+  .u-section-1 .u-text-3 {
+    margin-top: 28px;
+  }
+
   .u-section-1 .u-image-3 {
-    height: 290px;
-    margin-top: 266px;
+    height: 304px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-image-4 {
-    height: 238px;
-    margin-top: -542px;
+    height: 304px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 332px;
-  }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
   }
 
   .u-section-1 .u-image-5 {
-    height: 304px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-image-6 {
-    height: 304px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-image-7 {
     height: 290px;
     margin-top: 267px;
     margin-right: initial;
@@ -312,7 +273,7 @@
     width: auto;
   }
 
-  .u-section-1 .u-image-8 {
+  .u-section-1 .u-image-6 {
     height: 237px;
     margin-top: -543px;
     margin-right: initial;
@@ -323,10 +284,6 @@
   .u-section-1 .u-text-5 {
     margin-top: 334px;
   }
-
-  .u-section-1 .u-btn-6 {
-    margin-bottom: 42px;
-  }
 }
 
 @media (max-width: 575px) {
@@ -335,11 +292,13 @@
   }
 
   .u-section-1 .u-text-1 {
+    margin-top: 0;
     margin-left: 27px;
     margin-right: 27px;
   }
 
   .u-section-1 .u-text-2 {
+    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
   }
@@ -347,6 +306,7 @@
   .u-section-1 .u-image-1 {
     height: 193px;
     width: 343px;
+    margin-top: 0;
     margin-left: -2px;
     margin-right: -2px;
   }
@@ -354,31 +314,17 @@
   .u-section-1 .u-image-2 {
     height: 193px;
     width: 342px;
+    margin-top: 0;
     margin-left: -1px;
     margin-right: -1px;
   }
 
-  .u-section-1 .u-image-3 {
-    height: 140px;
-    margin-top: 16px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-image-4 {
-    height: 150px;
-    margin-top: 16px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
   .u-section-1 .u-text-3 {
-    margin-top: 27px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-1 {
+    margin-top: 0;
     margin-left: -84px;
     margin-right: -84px;
     padding-left: 30px;
@@ -386,75 +332,128 @@
   }
 
   .u-section-1 .u-btn-2 {
+    margin-top: 0;
     margin-left: -84px;
     margin-right: -84px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 121px;
+    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-image-5 {
+  .u-section-1 .u-image-3 {
     height: 191px;
+    margin-top: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-4 {
+    height: 191px;
+    margin-top: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-5 {
+    height: 183px;
+    margin-top: 0;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-image-6 {
-    height: 191px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-image-7 {
-    height: 183px;
-    margin-top: 16px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-image-8 {
     height: 149px;
-    margin-top: 16px;
+    margin-top: 0;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-text-5 {
-    margin-top: 27px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-3 {
+    margin-top: 0;
     margin-left: -84px;
     margin-right: -84px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 0;
+    margin-bottom: 0;
   }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 50vw;
+  min-height: 866px;
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 1.5rem;
-  margin: 0 0 60px;
+  width: auto;
+  margin: 78px 10px 60px;
 }
 
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
+.u-section-2 .u-text-2 {
+  width: auto;
+  margin: -646px 0 0;
+}
+
+.u-section-2 .u-text-3 {
+  width: auto;
+  margin: 28px 0 60px;
+}
+
+.u-section-2 .u-btn-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+}
+
+.u-section-2 .u-btn-2 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-text-1 {
-    margin-top: 63px;
+    margin: 161px 0 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: -609px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin: 546px auto 0;
+    padding: 10px 0;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin: 12px auto 60px;
+    padding: 10px 39px 10px 38px;
   }
 }
