--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -13,13 +13,11 @@
 }
 
 .u-section-1 .u-text-1 {
-  width: auto;
-  margin: 38px 0 0;
+  margin: 0;
 }
 
 .u-section-1 .u-text-2 {
-  width: auto;
-  margin: 44px 0 0;
+  margin: 0;
 }
 
 .u-section-1 .u-image-1 {
@@ -35,123 +33,103 @@
 }
 
 .u-section-1 .u-text-3 {
-  width: auto;
-  margin: 44px 0 60px;
+  margin: 0 0 60px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-text-4 {
-  width: auto;
   font-size: 1.5rem;
-  margin: 64px 37px 0 -37px;
+  margin: 0;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-8 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-9 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-11 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-12 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 .u-section-1 .u-btn-13 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-btn-2 {
-    font-size: 1rem;
+  .u-section-1 .u-text-1 {
+    width: auto;
   }
 
-  .u-section-1 .u-btn-3 {
-    font-size: 1rem;
+  .u-section-1 .u-text-2 {
+    width: auto;
   }
 
-  .u-section-1 .u-btn-4 {
-    font-size: 1rem;
+  .u-section-1 .u-text-3 {
+    width: auto;
   }
 
-  .u-section-1 .u-btn-5 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-6 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-7 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-8 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-9 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-10 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-11 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-12 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-btn-13 {
-    font-size: 1rem;
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-right: 37px;
+    margin-left: -37px;
   }
 }
 
@@ -192,7 +170,7 @@
   .u-section-1 .u-btn-4 {
     font-size: 1.25rem;
     margin: 12px auto 0;
-    padding: 14px 114px 15px;
+    padding: 14px 86px 15px 85px;
   }
 
   .u-section-1 .u-btn-5 {
